# environment-server

./: .gitignore  CMakeLists.txt  README.md  flush-spiff.sh  generate-spiff.sh  m_partitions.csv  platformio.ini  read-spiff.sh  sdkconfig  sdkconfig.esp-debug  sdkconfig.esp-debug.old
components/led_strip/: led_strip.h
data/: app.js  index.html
include/: AppPreferences.hpp  AppStructs.hpp  Hardware.hpp  RestServer.hpp  ackuRead.hpp  ackuVoltage.hpp  appPreferences.hpp  appStructs.hpp  common.hpp  filesystemChecker.hpp  hardware.hpp  ledColorsDefinition.hpp  ledStripe.hpp  main.hpp  restServer.hpp  rgb.hpp  statics.hpp  statusObject.hpp  tempMeasure.hpp  udpDataLog.hpp  udpDataSend.hpp  version.hpp  webServer.hpp  wifi.hpp  wifiConfig.hpp
main/: CMakeLists.txt  Hardware.cpp  RestServer.cpp  ackuVoltage.cpp  filesystemChecker.cpp  hardware.cpp  ledStripe.cpp  main.cpp  restServer.cpp  statusObject.cpp  tempMeasure.cpp  webServer.cpp  wifi.cpp
read/: app.js  chart-2.9.4.js  chart-4.0.1-min.js  default.css  index.html  today.json
read_files/: index.html
src/: CMakeLists.txt_  ackuRead.cpp  akcuRead.cpp  appPreferences.cpp  filesystemChecker.cpp  ledStripe.cpp  main.cpp  statics.cpp  statusObject.cpp  tempMeasure.cpp  udpDataLog.cpp  webServer.cpp  wifiConfig.cpp
tools/: .gitignore  acku.jdata  api.txt  createDataFiles.py  erase_all.sh  load-files.sh  makeSPIFF.sh  makeVersionString.sh  read-spiff.sh  temporary.jdata  timestamp-check.py  today.jdata  today.json  week.json  wget-log
www/: app.js  default.css  index.html  load-files.sh  today.jdata  today.json
(+26 files in other folders)
